 * Enhancement: warn the user if his browser does not support cookies, either because it's too old or because it was disabled
 * Enhancement: you can add multiple categories in one step. This is done by separating category names by the pipe character '|'.  For example to add category 'A' and 'B', add 'A|B'.
 * Enhancement: you can monitor bugs even when not reporter or handler
 * Fix: Account pruning now also removes profiles, preferences and such.
 * Fix: all string files use single quotes instead of double quotes
 * Fix: bug that let you change your username to that of an already existing user
 * Fix: bug where upload paths with \'s in them kept getting escaped over and over
 * Fix: db_result() and db_fetch_array() return data with slashes stripped
 * Fix: defects with updating project categories and versions
 * Fix: deleting the current project no longer gives an error (#2808)
 * Fix: email address validation should be much more RFC 822 compliant (#2819)
 * Fix: Made 'light grey' the default color for 'closed'
 * Fix: make form elements standards compliant
 * Fix: prevent an unauthorized user from deleting a bug by modifying the URL
 * Fix: print_api.php escapes double quotes in text fields, instead of replacing them by single quotes
 * Fix: problem deleting bugnotes
 * Fix: problem in core_API.php where constants were used before declaration
 * Fix: problem in email_api.php where an email could be send to none at all, in rare cases
 * Fix: problem in manage_proj_update.php which gave a warning when editing projects with empty upload file paths
 * Fix: problem with ambiguous column names in queries when using the text search or applying filters
 * Fix: problem with print_assign_to_option_list() not selecting the current user
 * Fix: quoted various text values retrieved from a database and used in a database query.
 * Fix: Removed special status of 'closed' concerning colors. 'View all bugs' will use the configured background color.