@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: bug_report.php,v 1.19 2003-02-15 10:25:16 jfitzell Exp $
+	# $Id: bug_report.php,v 1.20 2003-02-15 22:20:31 vboctor Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -105,7 +105,6 @@
 
 
 	# Handle custom field submission
-if( ON == config_get( 'use_experimental_custom_fields' ) ) {
 	$t_related_custom_field_ids = custom_field_get_linked_ids( helper_get_current_project() );
 	foreach( $t_related_custom_field_ids as $t_id ) {
 		$t_def = custom_field_get_definition( $t_id );
@@ -113,7 +112,6 @@ if( ON == config_get( 'use_experimental_custom_fields' ) ) {
 			trigger_error( ERROR_CUSTOM_FIELD_INVALID_VALUE, ERROR );
 		}
 	}
-}
 
 	print_page_top1();
 
