@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: bug_report_advanced_page.php,v 1.22 2003-02-15 10:25:16 jfitzell Exp $
+	# $Id: bug_report_advanced_page.php,v 1.23 2003-02-15 22:20:31 vboctor Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -292,7 +292,6 @@
 
 
 <!-- Custom Fields -->
-<?php if( ON == config_get( 'use_experimental_custom_fields' ) ) { ?>
 <?php
 	$t_related_custom_field_ids = custom_field_get_linked_ids( helper_get_current_project() );
 
@@ -319,7 +318,6 @@
 <?php
 	} # foreach( $t_related_custom_field_ids as $t_id )
 ?>
-<?php } # if( ON == config_get( 'use_experimental_custom_fields' ) ) ?>
 
 
 <!-- spacer -->
