@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: bug_view_page.php,v 1.36 2003-02-15 10:25:16 jfitzell Exp $
+	# $Id: bug_view_page.php,v 1.37 2003-02-15 22:20:31 vboctor Exp $
 	# --------------------------------------------------------
 ?>
 <?php
@@ -271,7 +271,6 @@
 
 
 <!-- Custom Fields -->
-<?php if( ON == config_get( 'use_experimental_custom_fields' ) ) { ?>
 <!-- spacer -->
 <tr height="5" class="spacer">
 	<td colspan="6"></td>
@@ -301,7 +300,6 @@
 		} # !$t_def['advanced']
 	} # foreach
 ?>
-<?php } # ON = config_get( 'use_experimental_custom_fields' ) ?>
 
 
 <!-- spacer -->
